--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "timeular",
     "time tracking",
     "reports",
-    "happy cog"
+    "reporting",
+    "tasks"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "bin": {
     "timeular": "./bin/index.js"
@@ -27,7 +28,10 @@
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^5.15.3",
+    "fetch-mock": "^7.5.1",
+    "mocha": "^6.2.2",
     "prettier": "1.16.4"
   }
 }
