--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@poutine/timeular-cli",
-  "author": "Chris Lagasse <soben@outlook.com>",
-  "version": "0.3.1",
+  "author": "Chris Lagasse <chrislagasse@protonmail.com>",
+  "version": "1.0.0",
   "description": "Manage your Timeular reporting and time tracking",
   "repository": {
     "type": "git",
@@ -15,7 +15,8 @@
     "happy cog"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "watch": "mocha --watch"
   },
   "bin": {
     "timeular": "./bin/index.js"
@@ -27,7 +28,9 @@
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
     "eslint": "^5.15.3",
+    "mocha": "^10.0.0",
     "prettier": "1.16.4"
   }
 }
