--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "dependencies": {
     "commander": "^2.19.0",
+    "fs": "^0.0.1-security",
     "global": "^4.3.2",
     "moment": "^2.24.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "chai": "^4.3.6",
