--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "eslint": "^5.15.3",
+    "eslint-plugin-mocha": "^10.1.0",
     "mocha": "^10.0.0",
-    "prettier": "1.16.4"
+    "sinon": "^14.0.0"
   }
 }
