--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "eslint": "^5.15.3",
-    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^10.0.0",
     "prettier": "^2.7.1",
     "sinon": "^14.0.0"
