--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "commander": "^2.19.0",
     "fs": "^0.0.1-security",
     "global": "^4.3.2",
+    "jira-client": "^8.1.0",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
-    "eslint": "^5.15.3",
+    "eslint": "^7.28.0",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "mocha": "^10.0.0",
